[gd_scene load_steps=6 format=3 uid="uid://c40xnyk34p28h"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_6bm1i"]
[ext_resource type="Texture2D" uid="uid://cx1mu5140hsu8" path="res://assets/textures/title-screen.png" id="2_7awo5"]
[ext_resource type="FontFile" uid="uid://dcd1ftr5iwmwb" path="res://assets/fonts/Almendra-Regular.ttf" id="3_3t2tm"]
[ext_resource type="FontFile" uid="uid://ck4tbor0r1rr6" path="res://assets/fonts/Almendra-Bold.ttf" id="3_b24cx"]

[sub_resource type="FontFile" id="FontFile_m4hlp"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6bm1i")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.152941, 0.301961, 1)

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 360.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayButton" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_right = 44.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("FontFile_m4hlp")
text = "PLAY GAME!"

[node name="MapButton" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -12.0
offset_right = 44.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontFile_m4hlp")
text = "TEST MAP"

[node name="title_image" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_7awo5")

[node name="press_key" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0.929412, 1, 1)
theme_override_fonts/font = ExtResource("3_b24cx")
theme_override_font_sizes/font_size = 34

[node name="credits" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0.929412, 1, 1)
theme_override_fonts/font = ExtResource("3_3t2tm")
theme_override_font_sizes/font_size = 17
